# sageinspector

./: .gitignore  README.md  setup.cfg  setup.py
.devtools/: license
.github/workflows/: license_check.yml
src/sageinspector/: __init__.py  __main__.py  _env.py  _version.py
src/sageinspector/cli/: __init__.py  _base.py  describe.py  logs.py  open.py  scaffold.py
src/sageinspector/lib/: __init__.py  arn.py  logs.py  resource.py
src/sageinspector/util/: __init__.py  aws_config.py  settings.py
