[metadata]
name = sage-inspector
version = attr: sageinspector.__version__
url = https://github.com/awslabs/sage-inspector
license = Apache-2.0
# author = 
# author_email = 
# maintainer = 
# maintainer_email = 
description = Tool to easily inspect Amazon SageMaker resources.
long_description = file: README.md
long_description_content_type = text/markdown
[options]
packages = find:
package_dir = = src
include_package_data = True
python_requires = >= 3.7
# Dependencies are in setup.py for GitHub's dependency graph.

[options.packages.find]
where = src

[options.entry_points]
# console_scripts =
#     si = sageinspector.cli:main
